@@ -58,6 +58,7 @@ det_sources = Split("""
 	detector/detector_factory.cc
 	detector/mysql_det_factory.cc
 	detector/gdml_det_factory.cc
+	detector/cad_det_factory.cc
 	detector/clara_det_factory.cc
 	detector/text_det_factory.cc""")
 env.Library(source = det_sources, target = "lib/detector")
