@@ -1,28 +1,23 @@
-
 // gemc headers
-#include "gdml_det_factory.h"
+#include "cad_det_factory.h"
 #include "utils.h"
 
-// geant4
-#include "G4GDMLParser.hh"
-#include "G4LogicalVolume.hh"
-#include "G4PhysicalVolumeStore.hh"
 
-map<string, detector> gdml_det_factory::loadDetectors()
+map<string, detector> cad_det_factory::loadDetectors()
 {
 
-	string hd_msg     = " >> GDML Factory: >> ";
+	string hd_msg     = " >> CAD Factory: >> ";
 	double verbosity  = gemcOpt.optMap["GEO_VERBOSITY"].arg;
 	string catch_v    = gemcOpt.optMap["CATCH"].args;
 
 	map<string, detector> dets;
 	
-  	// first check if there's at least one detector with GDML factory
+  	// first check if there's at least one detector with CAD factory
 	if(!check_if_factory_is_needed(RC.detectorConditionsMap, factoryType))
 		return dets;
 	
   	// there is at least one build with this factory.
-	// building all detectors that are tagged with GDML factory
+	// building all detectors that are tagged with CAD factory
 	for(map<string, detectorCondition>::iterator it=RC.detectorConditionsMap.begin(); it != RC.detectorConditionsMap.end() ; it++)
 	{
 		if(it->second.get_factory() != factoryType )
@@ -32,52 +27,7 @@ map<string, detector> gdml_det_factory::loadDetectors()
 		if(verbosity)
 			cout <<  hd_msg << " Importing Detector: <" <<  dname << "> with " << factoryType << " factory. "  << endl;
 
-		// parsing GDML file to build the map.
-		// This will store in the detector class all the logical and physical volumes
-		// At Construct() time, only the physical volumes to be G4PVPlaced will be
-		// the ones with mom = World
 
-		G4GDMLParser parser;
-		string gname     = dname + ".gdml";
-
-		// parsing G4 volumes
-		parser.Read(gname, 0);
-		// remove the volume from the collection. Not sure if we need it or not.
-
-		// the volume name has to be "World"
-		// its origin are "root" coordinate
-		G4LogicalVolume* gdmlWorld = parser.GetVolume("World");
-		G4PhysicalVolumeStore::DeRegister(parser.GetWorldVolume());
-
-		// first daughters: these volumes will be the ones with mother = "root"
-		for(int d=0; d<gdmlWorld->GetNoDaughters (); d++) {
-
-
-			string thisDetName = gdmlWorld->GetDaughter(d)->GetLogicalVolume()->GetName();
-			string momName =  gdmlWorld->GetDaughter(d)->GetMotherLogical()->GetName() ;
-
-			detector thisDet = get_detector(gdmlWorld->GetDaughter(d),  gemcOpt, RC);
-			thisDet.mother = "root";
-			thisDet.variation = gname;
-
-			// now browsing for daughters
-			G4LogicalVolume* firstDaughter = gdmlWorld->GetDaughter(d)->GetLogicalVolume();
-			for(int gd=0; gd<firstDaughter->GetNoDaughters(); gd++) {
-
-				detector thisDDet = get_detector(firstDaughter->GetDaughter(d),  gemcOpt, RC);
-				thisDDet.mother = thisDetName;
-				thisDDet.variation = gname;
-
-				//	cout <<  " gd: " << firstDaughter->GetDaughter(d)->GetLogicalVolume()->GetName() << endl;
-				dets[thisDDet.name] = thisDDet;
-
-				// setting the physical volume pointer so this volume is seen by the tree
-				dets[thisDDet.name].SetPhysical(firstDaughter->GetDaughter(d));
-			}
-
-			dets[thisDet.name] = thisDet;
-		}
-		delete gdmlWorld;
 
 
 
