@@ -6,6 +6,9 @@ Wanted features:
 - add magnetic field lines: /vis/scene/add/magneticField 5
 (doesn't work for both fields why)
 
+- make detector factories external plugins
+
+- rastering option with g4 volumes movements
 
 Code Improvements:
 ==================
@@ -59,12 +62,66 @@ ok too informal...
 
 
 
+Gemc Release Announcement
+-------------------------
 
 
+GEMC 2.4 was released on 6/19.
+
+To use at JLAB, set the proper environment:
+
+source /site/12gev_phys/production.csh 1.3.1
+
+The latest clas12 geometries have been updated in /group/clas12. Please use /group/clas12/clas12.gcard as
+the starting point for clas12 simulation.
+
+Please report documentation inconsistencies. You can also report bugs / feature requests on github (link below).
+There may be small changes in the way gemc is run (see the gcard field properties for example), or missing documentation in some cases.
+Thank you for your patience.
+
+What's new
+----------
+
+- electronic noise
+- database mechanism in digitization
+- field properties
+- neutron cosmic rays
+- material, sensitivity options
+- physics process catalogues
 
 
+Notes
+-----
+
+- Simulations with clas12 10^35 luminosity background may crash the geant4 navigation occasionally. We're investigating this.
+- Some bugs may have been fixed in gemc or geant4. To use the latest development version:
+
+  source /site/12gev_phys/production.csh devel
 
 
+What's Coming
+-------------
+
+The next version of gemc (2.5, currently "devel") will have the translation table mechanism and FADC output:
+GEMC output will be the same as what comes out of data acquisition. In addition we'll have an improved GDML (and possibly CAD) interface.
+
+The development version of gemc introduces external mblibraries. GEMC is being slowly re-written and re-organized into
+separate libraries that makes use of advanced C++11 features and makes the code more object oriented. This will culminate in release 3.0.
+
+
+Useful links
+------------
+
+Release 2.4 notes...: https://gemc.jlab.org/gemc/html/documentation/releases/2.4/2.4.html
+GEMC Roadmap........: https://gemc.jlab.org/gemc/html/documentation/releases/roadmap.html
+GEMC Downloads......: https://gemc.jlab.org/gemc/html/downloads.html
+GEMC Documentation..: https://gemc.jlab.org/gemc/html/documentation/documentation.html
+GEMC on Github......: https://github.com/gemc/source
+GEMC changelog......: https://gemc.jlab.org/gemc/html/documentation/releases/changelog.html
+
+Yours,
+
+Maurizio
 
 
 
